--- a/index.html
+++ b/index.html
@@ -11,100 +11,100 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="width: auto;">河西区妇女儿童保健中心简介</div>
-        <!-- 头部区域（可配合layui已有的水平导航） -->
-
+        <div class="layui-logo" style="width: auto;">河西区妇女儿童保健中心</div>
     </div>
     <div class="layui-side">
         <!--菜单-->
         <div class="left_nav">
             <dl>
+                <dt>菜单</dt>
                 <dd id="dd1">
                     <a href="javascript:" class="nav_left">1F</a>
                     <div class="nav_right">
-                        <a href="javascript:">检验科</a>
-                        <a href="javascript:">放射科</a>
-                        <a href="javascript:">儿童休闲区房间展示</a>
-                        <a href="javascript:">放射科房间展示</a>
-                        <a href="javascript:">放射科登记室</a>
-                        <a href="javascript:">药房</a>
-                        <a href="javascript:">挂号</a>
-                        <a href="javascript:">新生儿游泳</a>
-                        <a href="javascript:">采血室</a>
-                        <a href="javascript:">残疾人卫生间</a>
-                        <a href="javascript:">综合办公室</a>
-                        <a href="javascript:">政策法规咨询部</a>
-                        <a href="javascript:">女厕&nbsp;男厕</a>
-                        <a href="javascript:">楼梯</a>
-                        <a href="javascript:">电梯</a>
+                        <a href="index.html?id=1">检验科</a>
+                        <a href="index.html?id=2">放射科</a>
+                        <a href="index.html?id=3">儿童休闲区房间展示</a>
+                        <a href="index.html?id=4">放射科房间展示</a>
+                        <a href="index.html?id=5">放射科登记室</a>
+                        <a href="index.html?id=6">药房</a>
+                        <a href="index.html?id=7">挂号</a>
+                        <a href="index.html?id=8">新生儿游泳</a>
+                        <a href="index.html?id=9">采血室</a>
+                        <a href="index.html?id=10">残疾人卫生间</a>
+                        <a href="index.html?id=11">综合办公室</a>
+                        <a href="index.html?id=12">政策法规咨询部</a>
+                        <a href="index.html?id=13">女厕&nbsp;男厕</a>
+                        <a href="index.html?id=14">楼梯</a>
+                        <a href="index.html?id=15">电梯</a>
                     </div>
                 </dd>
                 <dd id="dd2">
                     <a href="javascript:" class="nav_left">2F</a>
                     <div class="nav_right">
-                        <a href="javascript:">孕期筛查房间展示</a>
-                        <a href="javascript:">孕期保健房间展示</a>
-                        <a href="javascript:">B超</a>
-                        <a href="javascript:">计划生育门诊</a>
-                        <a href="javascript:">计划生育检查室</a>
-                        <a href="javascript:">女童保健</a>
-                        <a href="javascript:">青苹果乐园</a>
-                        <a href="javascript:">开水间</a>
-                        <a href="javascript:">乳腺保健</a>
-                        <a href="javascript:">心电图</a>
-                        <a href="javascript:">更年期保健</a>
-                        <a href="javascript:">计划生育手术室</a>
-                        <a href="javascript:">宣教室</a>
-                        <a href="javascript:">盆底功能障碍诊疗门诊</a>
-                        <a href="javascript:">孕期保健</a>
-                        <a href="javascript:">孕期筛查</a>
-                        <a href="javascript:">孕期体重管理</a>
-                        <a href="javascript:">妇科检查室</a>
-                        <a href="javascript:">男检室</a>
-                        <a href="javascript:">女检室</a>
-                        <a href="javascript:">登记室</a>
-                        <a href="javascript:">楼梯</a>
-                        <a href="javascript:">电梯</a>
+                        <a href="index.html?id=16">孕期筛查房间展示</a>
+                        <a href="index.html?id=17">孕期保健房间展示</a>
+                        <a href="index.html?id=18">女检室</a>
+                        <a href="index.html?id=19">男检室</a>
+                        <a href="index.html?id=20">登记室</a>
+                        <a href="index.html?id=21">盆底功能障碍诊疗门诊</a>
+                        <a href="index.html?id=22">计划生育门诊</a>
+                        <a href="index.html?id=23">孕前保健</a>
+                        <a href="index.html?id=24">孕期筛查</a>
+                        <a href="index.html?id=25">妇科检查室</a>
+                        <a href="index.html?id=26">孕期体重管理</a>
+                        <a href="index.html?id=27">计划生育手术室</a>
+                        <a href="index.html?id=28">宣教室</a>
+                        <a href="index.html?id=29">女童保健</a>
+                        <a href="index.html?id=30">孕期保健</a>
+                        <a href="index.html?id=31">乳腺保健</a>
+                        <a href="index.html?id=32">更年期保健</a>
+                        <a href="index.html?id=33">心电图</a>
+                        <a href="index.html?id=34">B超</a>
+                        <a href="index.html?id=35">青苹果乐园</a>
+                        <a href="index.html?id=36">计划生育检查室</a>
+                        <a href="index.html?id=37:">楼梯</a>
+                        <a href="index.html?id=38">电梯</a>
+                        <a href="index.html?id=39">开水间</a>
                     </div>
                 </dd>
                 <dd id="dd3">
                     <a href="javascript:" class="nav_left">3F</a>
                     <div class="nav_right">
-                        <a href="javascript:">检验科</a>
-                        <a href="javascript:">放射科</a>
-                        <a href="javascript:">儿童休闲区房间展示</a>
-                        <a href="javascript:">放射科房间展示</a>
-                        <a href="javascript:">放射科登记室</a>
-                        <a href="javascript:">药房</a>
-                        <a href="javascript:">挂号</a>
-                        <a href="javascript:">新生儿游泳</a>
-                        <a href="javascript:">采血室</a>
-                        <a href="javascript:">残疾人卫生间</a>
-                        <a href="javascript:">综合办公室</a>
-                        <a href="javascript:">政策法规咨询部</a>
-                        <a href="javascript:">女厕&nbsp;男厕</a>
-                        <a href="javascript:">楼梯</a>
-                        <a href="javascript:">电梯</a>
+                        <a href="index.html?id=40">儿童保健房间展示</a>
+                        <a href="index.html?id=41">亲子乐园房间展示</a>
+                        <a href="index.html?id=42">心理行为发育评估室房间展示</a>
+                        <a href="index.html?id=43">测量室房间展示</a>
+                        <a href="index.html?id=44">共享空间展示</a>
+                        <a href="index.html?id=45">口腔科房间展示</a>
+                        <a href="index.html?id=46">智测室</a>
+                        <a href="index.html?id=47">高危儿门诊</a>
+                        <a href="index.html?id=48">口腔保健</a>
+                        <a href="index.html?id=49">亲子乐园</a>
+                        <a href="index.html?id=50">儿童保健</a>
+                        <a href="index.html?id=51">心理行为发育评估室</a>
+                        <a href="index.html?id=52">白内障筛查眼保健</a>
+                        <a href="index.html?id=53">髋关节筛查</a>
+                        <a href="index.html?id=54">听力保健</a>
+
+                        <a href="index.html?id=55">办公室</a>
+                        <a href="index.html?id=56">药具办公室</a>
+                        <a href="index.html?id=57">客厅</a>
+                        <a href="index.html?id=58">共享空间</a>
+                        <a href="index.html?id=59">哺乳室</a>
+                        <a href="index.html?id=60">业务办公室</a>
+                        <a href="index.html?id=61">会议室</a>
+                        <a href="index.html?id=62">测量室</a>
+                        <a href="index.html?id=63">新生儿筛查预检室</a>
+                        <a href="index.html?id=64">女厕&nbsp;男厕</a>
                     </div>
                 </dd>
                 <dd id="dd4">
                     <a href="javascript:" class="nav_left">4F</a>
                     <div class="nav_right">
-                        <a href="javascript:">检验科</a>
-                        <a href="javascript:">放射科</a>
-                        <a href="javascript:">儿童休闲区房间展示</a>
-                        <a href="javascript:">放射科房间展示</a>
-                        <a href="javascript:">放射科登记室</a>
-                        <a href="javascript:">药房</a>
-                        <a href="javascript:">挂号</a>
-                        <a href="javascript:">新生儿游泳</a>
-                        <a href="javascript:">采血室</a>
-                        <a href="javascript:">残疾人卫生间</a>
-                        <a href="javascript:">综合办公室</a>
-                        <a href="javascript:">政策法规咨询部</a>
-                        <a href="javascript:">女厕&nbsp;男厕</a>
-                        <a href="javascript:">楼梯</a>
-                        <a href="javascript:">电梯</a>
+                        <a href="index.html?id=65">健康宣教室</a>
+                        <a href="index.html?id=66">孕妇学校</a>
+                        <a href="index.html?id=67">楼梯</a>
+                        <a href="index.html?id=68">电梯</a>
                     </div>
                 </dd>
             </dl>
@@ -113,14 +113,26 @@
 
     <div class="layui-body">
         <div class="floor_img">
-            <!--<img src="img/1.png" alt="">-->
-
+            <div class="nav_1">
+                <div class="nav_1_img">
+                    <img src="img/doctor.png" alt="">
+                </div>
+                <div class="nav_1_datils">
+                    <p>天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区</p>
+                    <p>天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区</p>
+                    <p>天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区天津市河西区</p>
+                </div>
+            </div>
+            <div class="content_img">
+                <div class="layui-carousel" id="test1">
+                </div>
+            </div>
         </div>
         <div class="position_fixed">
-            <button class="layui-btn layui-btn-primary img_1">1F</button>
-            <button class="layui-btn layui-btn-primary img_2">2F</button>
-            <button class="layui-btn layui-btn-primary img_3">3F</button>
-            <button class="layui-btn layui-btn-primary img_4">-1F</button>
+            <button type="button" class="layui-btn layui-btn-primary img_1">1F</button>
+            <button type="button" class="layui-btn layui-btn-primary img_2">2F</button>
+            <button type="button" class="layui-btn layui-btn-primary img_3">3F</button>
+            <button type="button" class="layui-btn layui-btn-primary img_4">-1F</button>
         </div>
     </div>
 
